# sPoX

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/workflows/: on-push.yaml
contracts/: Clarinet.toml  README.md  package.json  pnpm-lock.yaml
contracts/contracts/: registry.clar
contracts/deployments/: default.simnet-plan.yaml
contracts/tests/: registry.test.ts
src/: context.rs  deposit_monitor.rs  error.rs  lib.rs  main.rs
src/config/: default.toml  error.rs  mod.rs  serialization.rs
src/stacks/: mod.rs  node.rs  registry.rs
src/storage/: memory.rs  mod.rs  model.rs
tests/: .env  README.md  common.ts  package.json  pnpm-lock.yaml  registry.ts
tests/registry/: registry.ts  spox.toml
tests/solo/: demo.ts  populate_env.sh  spox.toml
webapp/: .env.example  README.md  next.config.ts  package.json
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/components/: app-header.tsx  connect-button.tsx  deposit-form.tsx  derivation-details.tsx  result-card.tsx  ui.tsx  wallet-provider.tsx
webapp/src/lib/: bitcoin.ts  constants.ts  deposit.ts  stacks-api.ts
webapp/tests/: bitcoin.test.ts  deposit.test.ts
