[package]
name = "spox"
version = "0.1.0"
edition = "2024"

[features]
default = []
testing = []

[dependencies]
sbtc = { git = "https://github.com/stacks-sbtc/sbtc.git", rev = "b2865dd9e63fb143c6b427c0c4a013233a52f283", default-features = false }
emily-client = { git = "https://github.com/stacks-sbtc/sbtc.git", rev = "b2865dd9e63fb143c6b427c0c4a013233a52f283", default-features = false }

clarity = { git = "https://github.com/stacks-network/stacks-core", rev = "1cba695b09690790b1220b0f5d149f70f78ddea5", default-features = false }

bitcoin = { version = "0.32.8", default-features = false, features = ["serde", "rand-std"] }
bitcoincore-rpc = { version = "0.19.0", default-features = false }
bitcoincore-rpc-json = { version = "0.19.0", default-features = false }
clap = { version = "4.6.1", default-features = false, features = ["derive", "env", "std", "help"] }
config = { version = "0.15.22", default-features = false, features = ["toml"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.52.1", default-features = false, features = ["signal", "macros", "rt-multi-thread", "rt"] }
tracing = { version = "0.1.44", default-features = false, features = ["attributes"]}
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["env-filter", "fmt", "json", "time", "ansi"] }
url = { version = "2.5.8", default-features = false }
lru = { version = "0.17.0", default-features = false }

[dev-dependencies]
mockito = { version = "1.7.2", default-features = false }
testing-emily-client = { git = "https://github.com/stacks-sbtc/sbtc.git", rev = "b2865dd9e63fb143c6b427c0c4a013233a52f283", default-features = false }
test-case = { version = "3.3.1", default-features = false }
